9/28/10 pull PlateChargeNode out of PlateNode, bad idea to merge them
9/28/10 merge PlateChargeNode into PlateNode
# 0.00.15 (44492) Sep 28, 2010
9/28/10 dev version to demonstrate problems with plate charge representation
9/28/10 keep charges fully inside the plate by taking the charge size into account
9/28/10 reduce size of charges to match Noah's mock up
9/28/10 fixed plate area drag handle
9/28/10 fixed plate separation drag handle
9/28/10 a rough version of showing plate charges, to demonstrate that this design does not scale well
9/28/10 converted everything to use 3D MVT to create perspective (big change, broke 2 drag handles) [44484]
9/28/10 first attempt at adding 3D model to 2D view transform to MVT (untested)
9/28/10 straighten out some things in BoxNode related to 3D perspective
9/28/10 reset the battery slider on Reset All
9/28/10 ensure that all meters remain in the play area when the main window is resized
9/28/10 hook up "Plate Charges" check box
# 0.00.14 (44465) Sep 28, 2010
9/28/10 display the number of plate charges, to check that this representation is going to work
# 0.00.13 (44455) Sep 28, 2010
9/28/10 change dielectric constant range to 1-5, per Noah P.
9/28/10 change battery voltage range to +-1.5V, per Noah P.
9/27/10 rename ScaleButtonNode to ZoomButtonNode, since my people are calling it a "zoom button"
9/27/10 create nodes for positive and negative charges, use in other places that require + and -
9/27/10 create scale button programmatically, image files looked lousy because these buttons are so small
# 0.00.12 (44365) Sep 24, 2010
9/24/10 replace PText("-") with PPath(Rectangle2D) on current indicator, so that "-" can be precisely centered
# 0.00.11 (44358) Sep 23, 2010
9/23/10 make current indicator fade out faster (500 ms)
9/23/10 change current indicator to use a constant transparency (0.75f) rather than proportional to dV/dt
# 0.00.10 (44355) Sep 23, 2010