@@ -1,3 +1,4 @@
+9/28/10 create infrastructure for dielectric charge views, wire up to control panel
 9/28/10 pull PlateChargeNode out of PlateNode, bad idea to merge them
 9/28/10 merge PlateChargeNode into PlateNode
 # 0.00.15 (44492) Sep 28, 2010
